SFUSA/force-app/main/default/objects/Time_Log__c/fields/Check_Out_Reason__c.field-meta.xml
<CustomField>
        <fullName>Check_Out_Reason__c</fullName>
        <label>Check Out Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Close of Business</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>PTO</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>