SFUSA/force-app/main/default/objects/Time_Log__c/fields/Current_Status__c.field-meta.xml
<CustomField>
        <fullName>Current_Status__c</fullName>
        <formula>IF( Checked_In__c = TRUE, IMAGE("/servlet/servlet.FileDownload?file=015o0000001wimm","Checked-In")&amp;" You are currently checked-in", IMAGE("/servlet/servlet.FileDownload?file=015o0000001wimn","Checked-Out")&amp;" You are currently checked-out")</formula>
        <label>Current Status</label>
        <type>Text</type>
    </CustomField>