SFUSA/force-app/main/default/objects/Time_Log__c/fields/Employee__c.field-meta.xml
<CustomField>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Logs</relationshipName>
        <type>Lookup</type>
    </CustomField>