SFUSA/force-app/main/default/objects/Time_Log__c/fields/Last_Time_Checked_In__c.field-meta.xml
<CustomField>
        <fullName>Last_Time_Checked_In__c</fullName>
        <label>Last Time Checked-In</label>
        <type>DateTime</type>
    </CustomField>