SFUSA/force-app/main/default/objects/Time_Log__c/recordTypes/Check_In.recordType-meta.xml
<RecordType>
        <fullName>Check_In</fullName>
        <active>true</active>
        <label>Check-In</label>
    </RecordType>