SFUSA/force-app/main/default/objects/Time_Log__c/recordTypes/Check_Out.recordType-meta.xml
<RecordType>
        <fullName>Check_Out</fullName>
        <active>true</active>
        <label>Check-Out</label>
    </RecordType>