SFUSA/force-app/main/default/objects/Time_Log__c/listViews/All_Time_Logs.listView-meta.xml
<ListView>
        <fullName>All_Time_Logs</fullName>
        <columns>NAME</columns>
        <columns>Checked_In__c</columns>
        <columns>Current_Status__c</columns>
        <columns>Last_Time_Checked_In__c</columns>
        <columns>Last_Time_Checked_Out__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Time Logs</label>
        <language>en_US</language>
    </ListView>